# threei

./: LICENSE  README.md  environment.yml  main.py  requirements.txt
napari-fits-hdu/: pyproject.toml
napari-fits-hdu/src/napari_fits_hdu/: __init__.py  fits_hdu_panel.py  fits_services.py  gmos_mosaic.py  napari.yaml  plugin_activation.py
threei/: __init__.py  app_metadata.py
threei/analysis/: gaussian.py
threei/analysis/center/: __init__.py  background.py  centroid.py  core_fit.py  models.py  records.py  service.py
threei/observation/: __init__.py  target_ephemeris_aliases.py  target_ephemeris_cache.py  target_ephemeris_contract.py  target_ephemeris_horizons_query.py  target_ephemeris_observer_policy.py  target_ephemeris_provider.py
threei/observation/overlay/: __init__.py  context_cache.py  context_layer_policy.py  context_model.py  context_observer_policy.py  context_provider.py  data_resolver.py  debug.py  entities.py  ephemeris.py  metadata_keys.py  metadata_writer.py  models.py  panel_state.py  preview_contracts.py  render_contracts.py  scene_manager.py  scene_model.py  shapes.py  update_context.py
threei/processing/: __init__.py  background.py  compute_manager.py  denoise.py  dtypes.py  nonlinear.py  normalization.py  segmented_tone.py  target_superres.py  target_superres_backends.py  target_superres_numba.py  unsharp_backends.py  unsharp_mask.py
threei/processing/ls/: __init__.py  classic.py  (+11 more)
threei/ui/: __init__.py  center_dependency_recompute_manager.py  center_locator_controller.py  center_locator_panel_widgets.py  center_marker_visual_owner.py
(+123 files in other folders)
