# pyproject.toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-fits-hdu"
version = "0.1.0"
description = "napari plugin for switching and inspecting FITS HDU image layers."
authors = [{ name = "Sattarov T.N." }]
license = { text = "MIT" }
dependencies = ["napari", "astropy", "numpy", "qtpy"]

[project.entry-points."napari.manifest"]
napari-fits-hdu = "napari_fits_hdu:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
napari_fits_hdu = ["napari.yaml"]
